Added some CSS and  Confirm Password Validation Function

--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./signup.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Dancing+Script:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Sign Up Page</title>
   </head>
   <body>
@@ -20,6 +25,7 @@
             placeholder="Name"
             type="text"
             autocomplete="off"
+            autofocus
           />
         </div>
 
