Added some CSS and Rearranged Some Code

--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -17,7 +17,7 @@
       <h1>Welcome</h1>
       <h2>Create Account</h2>
       <form action="./SignUp.html">
-        <div class="namecon">
+        <div class="inputdivs">
           <input
             name="user_name"
             required
@@ -29,7 +29,7 @@
           />
         </div>
 
-        <div class="mailcon">
+        <div class="inputdivs">
           <input
             required
             name="email"
@@ -40,7 +40,7 @@
           />
         </div>
 
-        <div class="passcon">
+        <div class="inputdivs">
           <input
             name="password"
             required
@@ -51,7 +51,7 @@
           />
         </div>
 
-        <div class="rpasscon">
+        <div class="inputdivs">
           <input
             name="password"
             required
