--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="clock-main" id="clock" onload="showTime()"></div>
+    <!-- this div has a function on page load it will call that function and show time -->
     <main>
       <div class="container">
         <a href="#"><button class="btn-main">Sign up</button></a>
