Added some animation and link to login page

--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -18,7 +18,7 @@
       <h1>Welcome</h1>
       <h2>Create Account</h2>
       <!-- starting of form -->
-      <form action="./SignUp.html">
+      <form action="/login.html">
         <!--action to added as login or landingpage-->
         <!--First Input field with classname inputdivs and id user_name-->
         <div class="inputdivs">
@@ -81,7 +81,7 @@
       </form>
 
       <!-- Link back to login page in case account already present -->
-      <p>Already have an account? <a href="./signup.html">Login Here</a></p>
+      <p>Already have an account? <a href="/login.html">Login Here</a></p>
     </div>
 
     <!-- Adding signup.js file link -->
