login with lcoal storage completed

--- a/login.html
+++ b/login.html
@@ -27,9 +27,8 @@
           <input
             class="text-inputs"
             type="email"
-            name="username"
-            id="username"
-            id="username"
+            name="email"
+            id="email"
             placeholder="Email"
           />
           <label for="password">Password</label>
