--- a/contact.html
+++ b/contact.html
@@ -4,32 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- linking with contact.css -->
+    <link rel="stylesheet" href="contact.css" />
+
     <title>Contact Page</title>
   </head>
   <body>
     <div class="container">
-      <h1>Contact Page</h1>
-      <form action="">
-        <div>
-          <label for="">Tell us your name</label>
-          <input type="text" />
-        </div>
+      <div class="info">
+        <!-- Clock Time -->
+        <h2 id="clock"></h2>
 
-        <div>
-          <label for="">Enter Email please</label>
-          <input type="email" />
-        </div>
+        <h1>Contact Page</h1>
+        <form action="">
+          <div>
+            <label for="nameinput">Tell us your name</label>
+            <input
+              id="nameinput"
+              type="text"
+              required
+              placeholder="Full name"
+            />
+          </div>
 
-        <div>
-          <label for="">Do you have a website?</label>
-          <input type="text" />
-        </div>
+          <div>
+            <label for="emailinput">Enter Email please</label>
+            <input id="emailinput" type="email" required placeholder="Email" />
+          </div>
 
-        <div>
-          <label for="">Message</label>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
-        </div>
-      </form>
+          <div>
+            <label for="websiteinput">Do you have a website?</label>
+            <input id="websiteinput" type="text" />
+          </div>
+
+          <div>
+            <label for="textareainput">Message</label>
+            <textarea
+              placeholder="Enter your message here"
+              name=""
+              id="textareainput"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+          <input class="btn" type="button" value="Submit" />
+        </form>
+      </div>
     </div>
+
+    <!-- Script for clock -->
+    <script src="login.js"></script>
   </body>
 </html>
