--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -13,12 +13,13 @@
     <title>Sign Up Page</title>
   </head>
   <body>
+    <div class="clock-main" id="clock" onload="showTime()"></div>
     <!-- Main div named maincon -->
     <div class="maincon">
       <h1>Welcome</h1>
       <h2>Create Account</h2>
       <!-- starting of form -->
-      <form action="/login.html">
+      <form name="myform" action="">
         <!--action to added as login or landingpage-->
         <!--First Input field with classname inputdivs and id user_name-->
         <div class="inputdivs">
@@ -36,11 +37,11 @@
         <!--Second Input field with classname inputdivs and id email-->
         <div class="inputdivs">
           <input
-            required
+            type="email"
             name="email"
+            required
             id="email"
             placeholder="Your Email"
-            type="email"
             autocomplete="off"
           />
         </div>
@@ -60,7 +61,7 @@
         <!--First Input field with classname inputdivs and id confirm_password-->
         <div class="inputdivs">
           <input
-            name="password"
+            name="cpassword"
             required
             id="confirm_password"
             placeholder="Confirm Password"
@@ -69,19 +70,19 @@
         </div>
         <!-- Adding checkbox with terms of service anchor tags that is linked to nothing -->
         <p>
-          <input type="checkbox" required />
-          I agree to all statements in
-          <a href="#">Terms of Service</a>
+          <input type="checkbox" name="checkbox" id="checkbox" required />
+          I agree to all
+          <a href="#">Terms and Conditions</a>
         </p>
 
         <!-- Adding Sign up button -->
         <div class="signb">
-          <input type="submit" id="submitbtn" value="SIGN UP" />
+          <input type="button" id="submitbtn" value="SIGN UP" />
         </div>
       </form>
 
       <!-- Link back to login page in case account already present -->
-      <p>Already have an account? <a href="/login.html">Login Here</a></p>
+      <p>Already have an account? <a href="./signup.html"><span class="text0">Login Here</a></span></p>
     </div>
 
     <!-- Adding signup.js file link -->
