--- a/login.html
+++ b/login.html
@@ -8,40 +8,50 @@
     <!-- LInking with external css -->
     <link rel="stylesheet" href="login.css" />
 
-    <title>Login</title>
+    <title>Login Page</title>
   </head>
   <body>
     <!-- Clock Time -->
-    <h2 id="clock"></h2>
+    <div class="clock-main" id="clock" onload="showTime()"></div>
 
     <div class="container">
-      <div class="main">
-        <h1>Login Form</h1>
+      <!-- <div class="main"> -->
+      <h1>Welcome</h1>
+      <h2>Login</h2>
 
-        <form id="form_id" name="myform">
-          <!-- updating label for attribute -->
-
-          <label for="username">Email</label>
+      <form id="form_id" name="myform">
+        <div class="main">
           <input
-            class="text-inputs"
             type="email"
             name="email"
+            required
             id="email"
-            placeholder="Email"
+            placeholder="Your Email"
+            autocomplete="off"
           />
-          <label for="password">Password</label>
+        </div>
+
+        <div class="main">
           <input
-            class="text-inputs"
             type="password"
             name="password"
             id="password"
             placeholder="Password"
           />
+        </div>
 
-          <!-- Button input  -->
+        <!-- Button Input  -->
+        <div class="main">
           <input type="button" value="Login" id="submit" onclick="validate()" />
-        </form>
-      </div>
+        </div>
+      </form>
+
+      <!-- Link back to login page in case account already present -->
+      <p>Don't have an Account? <a href="/Sign Up Page/signup.html"><span class="text0">Login Here</a></span></p>
+    </div>
+        
+        
+      </form>
     </div>
 
     <!-- javascript script -->
