--- a/contact.html
+++ b/contact.html
@@ -11,45 +11,49 @@
     <title>Contact Page</title>
   </head>
   <body>
-    <div class="container">
-      <!-- Clock Time -->
-      <h2 id="clock"></h2>
-      <div class="info">
-        <h1>Contact Page</h1>
-        <form action="">
-          <div>
-            <label for="nameinput">Tell us your name</label>
-            <input
-              id="nameinput"
-              type="text"
-              required
-              placeholder="Full name"
-            />
-          </div>
+    <!-- Clock Time -->
+    <div class="clock-main" id="clock"></div>
 
-          <div>
-            <label for="emailinput">Enter Email please</label>
-            <input id="emailinput" type="email" required placeholder="Email" />
-          </div>
+    <div class="info">
+      <h1>Contact Page</h1>
+      <form action="/contact.html">
+        <div class="inputdivs">
+          <input
+            id="nameinput"
+            type="text"
+            required
+            placeholder="Tell Us Your Nmae"
+          />
+        </div>
 
-          <div>
-            <label for="websiteinput">Do you have a website?</label>
-            <input id="websiteinput" type="text" />
-          </div>
+        <div class="inputdivs">
+          <input
+            id="emailinput"
+            type="email"
+            required
+            placeholder="Tell Us Your Email"
+          />
+        </div>
 
-          <div>
-            <label for="textareainput">Message</label>
-            <textarea
-              placeholder="Enter your message here"
-              name=""
-              id="textareainput"
-              cols="30"
-              rows="10"
-            ></textarea>
-          </div>
-          <input class="btn" type="button" value="Submit" />
-        </form>
-      </div>
+        <div class="inputdivs">
+          <input
+            id="websiteinput"
+            type="text"
+            placeholder="Do you have a website?"
+          />
+        </div>
+
+        <div class="textarea">
+          <textarea
+            placeholder="Enter your message here"
+            name=""
+            id="textareainput"
+            cols="30"
+            rows="10"
+          ></textarea>
+        </div class="inputdivs">
+        <input   id="submitbtn" type="button" value="Submit" />
+      </form>
     </div>
 
     <!-- Script for clock -->
