--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -16,7 +16,7 @@
     <div class="maincon">
       <h1>Welcome</h1>
       <h2>Create Account</h2>      
-      <form name="myform" action="/login.html">
+      <form name="myform" action="/Login Page/login.html">
 
         <!--First Input field with classname inputdivs and id user_name-->
         <div class="inputdivs">
@@ -80,10 +80,10 @@
       </form>
 
       <!-- Link back to login page in case account already present -->
-      <p>Already have an account? <a href="/login.html"><span class="text0">Login Here</a></span></p>
+      <p>Already have an account? <a href="/Login Page/login.html"><span class="text0">Login Here</a></span></p>
     </div>
 
     <!-- Adding signup.js file link -->
-    <script src="signup.js"></script>
+    <script src="/Sign Up Page/signup.js"></script>
   </body>
 </html>
