--- a/Contact Page/contact.html
+++ b/Contact Page/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- linking with contact.css -->
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="./contact.css" />
 
     <title>Contact Page</title>
   </head>
@@ -57,6 +57,6 @@
     </div>
 
     <!-- Script for clock -->
-    <script src="login.js"></script>
+    <script src="/Login Page/login.js"></script>
   </body>
 </html>
