--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- LInking with external css -->
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="./login.css" />
 
     <title>Login Page</title>
   </head>
@@ -47,7 +47,7 @@
       </form>
 
       <!-- Link back to login page in case account already present -->
-      <p>Don't have an Account? <a href="/Sign Up Page/signup.html"><span class="text0">Login Here</a></span></p>
+      <p>Don't have an Account? <a href="/Sign Up Page/signup.html"><span class="text0">SignUp Here</a></span></p>
     </div>
         
         
@@ -55,6 +55,6 @@
     </div>
 
     <!-- javascript script -->
-    <script src="login.js"></script>
+    <script src="/Login Page/login.js"></script>
   </body>
 </html>
