--- a/Contact Page/contact.html
+++ b/Contact Page/contact.html
@@ -22,7 +22,7 @@
             id="nameinput"
             type="text"
             required
-            placeholder="Tell Us Your Nmae"
+            placeholder="Tell Us Your Name"
           />
         </div>
 
