--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -19,7 +19,7 @@
       <h1>Welcome</h1>
       <h2>Login</h2>
 
-      <form  action="/Contact Page/contact.html" id="form_id" name="myform">
+      <form  action="/Landing Page/landingpage.html" id="form_id" name="myform">
         <div class="main">
           <input
             type="email"
@@ -42,7 +42,7 @@
 
         <!-- Button Input  -->
         <div class="main">
-          <input type="submit" value="Login" id="submit" onclick="validate()" />
+          <input type="submit" value="Login" id="submit"/>
         </div>
       </form>
 
