--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -16,7 +16,7 @@
     <div class="maincon">
       <h1>Welcome</h1>
       <h2>Create Account</h2>      
-      <form name="myform" action="/Login Page/login.html">
+      <form name="myform" action="/Login Page/login.html" method="GET">
 
         <!--First Input field with classname inputdivs and id user_name-->
         <div class="inputdivs">
@@ -63,6 +63,7 @@
             id="confirm_password"
             placeholder="Confirm Password"
             type="password"
+            autofocus
           />
         </div>
         
