--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -19,7 +19,7 @@
       <h1>Welcome</h1>
       <h2>Login</h2>
 
-      <form  action="/Landing Page/landingpage.html" id="form_id" name="myform">
+      <form  id="form_id" name="myform">
         <div class="main">
           <input
             type="email"
