--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -28,6 +28,7 @@
             id="email"
             placeholder="Your Email"
             autocomplete="off"
+            autofocus
           />
         </div>
 
@@ -42,7 +43,7 @@
 
         <!-- Button Input  -->
         <div class="main">
-          <input type="submit" value="Login" id="submit"/>
+          <input type="button" value="Login" id="submit"/>
         </div>
       </form>
 
