--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -16,7 +16,7 @@
     <div class="maincon">
       <h1>Welcome</h1>
       <h2>Create Account</h2>      
-      <form name="myform" action="/Login Page/login.html" method="GET">
+      <form name="myform" action="/Login Page/login.html" >
 
         <!--First Input field with classname inputdivs and id user_name-->
         <div class="inputdivs">
@@ -75,7 +75,7 @@
 
         <!-- Adding Sign up button -->
         <div class="inputdivs">
-          <input type="submit" id="submitbtn" value="SIGN UP" />
+          <input type="button" id="submitbtn" value="SIGN UP" />
         </div>
       </form>
 
