--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -73,9 +73,9 @@
           <a href="#">Terms and Conditions</a>
         </p>
 
-        <!-- Adding Sign up button -->
+        <!-- Adding Sign Up button -->
         <div class="inputdivs">
-          <input type="button" id="submitbtn" value="SIGN UP" />
+          <input type="submit" id="submitbtn" value="SIGN UP" />
         </div>
       </form>
 
