--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- Clock Time -->
-    <div class="clock-main" id="clock" onload="showTime()"></div>
+    <div class="clock-main" id="clock"></div>
 
     <div class="container">
       <!-- <div class="main"> -->
