--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -43,7 +43,7 @@
 
         <!-- Button Input  -->
         <div class="main">
-          <input type="button" value="Login" id="submit" onsubmit="vaidate()"/>
+          <input type="button" value="Login" id="submit" onclick="validate()"/>
         </div>
       </form>
 
