Added Password Validation Fix on SignUp Page

--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -40,6 +40,7 @@
             id="email"
             placeholder="Your Email"
             autocomplete="off"
+            autofocus
           />
         </div>
 
@@ -51,7 +52,8 @@
             id="password"
             placeholder="Password"
             type="password"
-            autocomplete="off"            
+            autocomplete="off" 
+            autofocus           
           />
         </div>
 
@@ -62,7 +64,8 @@
             required
             id="confirm_password"
             placeholder="Confirm Password"
-            type="password"            
+            type="password"
+            autofocus            
           />
         </div>
         
@@ -75,7 +78,7 @@
 
         <!-- Adding Sign Up button -->
         <div class="inputdivs">
-          <input type="submit" id="submitbtn" value="SIGN UP" />
+          <input type="button" id="submitbtn" value="SIGN UP" />
         </div>
       </form>
 
