--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -78,7 +78,7 @@
 
         <!-- Adding Sign Up button -->
         <div class="inputdivs">
-          <input type="button" id="submitbtn" value="SIGN UP" />
+          <input type="button" id="submitbtn" value="Sign Up" />
         </div>
       </form>
 
