--- a/Contact Page/contact.html
+++ b/Contact Page/contact.html
@@ -22,7 +22,7 @@
             id="nameinput"
             type="text"
             required
-            placeholder="Tell Us Your Name"
+            placeholder="Name"
           />
         </div>
 
@@ -31,7 +31,7 @@
             id="emailinput"
             type="email"
             required
-            placeholder="Tell Us Your Email"
+            placeholder="Email"
           />
         </div>
 
@@ -49,7 +49,7 @@
             name=""
             id="textareainput"
             cols="30"
-            rows="10"
+            rows="5"
           ></textarea>
         </div class="inputdivs">
         <input   id="submitbtn" type="button" value="Submit" />
