--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -56,6 +56,6 @@
     </div>
 
     <!-- javascript script -->
-    <script src="/Login Page/login.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
