--- a/Sign Up Page/signup.html
+++ b/Sign Up Page/signup.html
@@ -14,7 +14,7 @@
     
     <!-- Main div named maincon -->
     <div class="maincon">
-      <h1>Welcome</h1>
+      <!-- <h1>Welcome</h1> -->
       <h2>Create Account</h2>      
       <form name="myform" action="/Login Page/login.html" >
 
